src/test/resources/predinline/errors/unfolding.vpr
inline predicate falze()
{
    false
}

method test() {
    //:: ExpectedOutput(assignment.failed:insufficient.permission)
    var res: Int := unfolding falze() in 0
}